==> u-blox/ubxlib/port/platform/stm32cube/src/u_port_i2c.c <==
#include "stddef.h"
#include "stdint.h"
#include "stdbool.h"
#include "u_error_common.h"
#include "u_port.h"
#include "u_port_os.h"
#include "u_port_gpio.h" // For unblocking
#include "u_port_i2c.h"
#include "stm32f4xx_ll_bus.h"
#include "stm32f4xx_ll_gpio.h"
#include "stm32f4xx_ll_i2c.h"
#include "stm32f4xx_hal_i2c.h"
#include "cmsis_os.h"
#include "u_port_private.h"  // Down here 'cos it needs GPIO_TypeDef
# define U_PORT_I2C_MAX_NUM 3
# define U_PORT_I2C_DUTY_CYCLE LL_I2C_DUTYCYCLE_16_9
# define U_PORT_I2C_DUTY_CYCLE LL_I2C_DUTYCYCLE_2
#define U_PORT_HAL_I2C_GET_FLAG(__PREG__, __FLAG__) ((((uint8_t)((__FLAG__) >> 16U)) == 0x01U) ? \
                                                     (((((__PREG__)->SR1) & ((__FLAG__) & I2C_FLAG_MASK)) == ((__FLAG__) & I2C_FLAG_MASK)) ? SET : RESET) : \
                                                     (((((__PREG__)->SR2) & ((__FLAG__) & I2C_FLAG_MASK)) == ((__FLAG__) & I2C_FLAG_MASK)) ? SET : RESET))
#define U_PORT_HAL_I2C_CLEAR_FLAG(__PREG__, __FLAG__) ((__PREG__)->SR1 = ~((__FLAG__) & I2C_FLAG_MASK))
#define U_PORT_HAL_I2C_CLEAR_ADDRFLAG(__PREG__)  \
  do{                                            \
    __IO uint32_t tmpreg = 0x00U;                \
    tmpreg = (__PREG__)->SR1;                    \
    tmpreg = (__PREG__)->SR2;                    \
    UNUSED(tmpreg);                              \
  } while(0)

static int32_t send(I2C_TypeDef *pReg, uint16_t address,
                    const char *pData, size_t size,
                    int32_t timeoutMs, bool noStop,
                    bool *pIgnoreBusy)
{
    int32_t errorCode;

    errorCode = sendAddress(pReg, address, timeoutMs, false, pIgnoreBusy);
    if (errorCode == 0) {
        // Clear the ADDR flag
        U_PORT_HAL_I2C_CLEAR_ADDRFLAG(pReg);
        // Now send the data
        while ((size > 0) && (errorCode == 0)) {
            if (waitTransmitOk(pReg, I2C_FLAG_TXE, timeoutMs)) {
                // Write a byte
                pReg->DR = *pData;
                pData++;
                size--;
                if ((U_PORT_HAL_I2C_GET_FLAG(pReg, I2C_FLAG_BTF) == SET) && (size > 0)) {
                    // Write another byte
                    pReg->DR = *pData;
                    pData++;
                    size--;
                }
                // Wait for BTF flag to be set
                if (!waitTransmitOk(pReg, I2C_FLAG_BTF, timeoutMs)) {
                    errorCode = (int32_t) U_ERROR_COMMON_NOT_RESPONDING;
                }
            } else {
                errorCode = (int32_t) U_ERROR_COMMON_NOT_RESPONDING;
            }
        }
        if (errorCode == 0) {
            if (!noStop) {
                // Generate stop
                SET_BIT(pReg->CR1, I2C_CR1_STOP);
            }
        }
    }

    return errorCode;
}

static int32_t receive(I2C_TypeDef *pReg, uint16_t address,
                       char *pData, size_t size, int32_t timeoutMs,
                       bool *pIgnoreBusy)
{
    int32_t errorCodeOrLength;
    size_t bytesToReceive = size;
    bool keepGoing = true;

    errorCodeOrLength = sendAddress(pReg, address, timeoutMs, true, pIgnoreBusy);
    if (errorCodeOrLength == 0) {
        // The only thing that can go wrong from here on is a timeout
        errorCodeOrLength = (int32_t) U_ERROR_COMMON_TIMEOUT;
        if (bytesToReceive == 0) {
            // Clear the ADDR flag
            U_PORT_HAL_I2C_CLEAR_ADDRFLAG(pReg);
            // Generate stop
            SET_BIT(pReg->CR1, I2C_CR1_STOP);
        } else if (bytesToReceive == 1) {
            // Disable acknowledge
            CLEAR_BIT(pReg->CR1, I2C_CR1_ACK);
            // Clear the ADDR flag
            U_PORT_HAL_I2C_CLEAR_ADDRFLAG(pReg);
            // Generate stop
            SET_BIT(pReg->CR1, I2C_CR1_STOP);
        } else if (bytesToReceive == 2) {
            // Disable acknowledge
            CLEAR_BIT(pReg->CR1, I2C_CR1_ACK);
            // Enable Pos
            SET_BIT(pReg->CR1, I2C_CR1_POS);
            // Clear the ADDR flag
            U_PORT_HAL_I2C_CLEAR_ADDRFLAG(pReg);
        } else {
            // Enable acknowledge
            SET_BIT(pReg->CR1, I2C_CR1_ACK);
            // Clear the ADDR flag
            U_PORT_HAL_I2C_CLEAR_ADDRFLAG(pReg);
        }
        while ((bytesToReceive > 0) && keepGoing) {
            if (bytesToReceive <= 3) {
                if (bytesToReceive == 1) { // One byte
                    // Wait until the RXNE flag is set
                    // Note: the original ST code had a special function
                    // for this but the only special thing in it is related
                    // to slave operation (checking STOPF), which is not
                    // implemented here, hence the standard waitFlagOk()
                    // can be used.
                    keepGoing = waitFlagOk(pReg, I2C_FLAG_RXNE, SET, timeoutMs);
                    if (keepGoing) {
                        // Read the data from DR
                        *pData = (char) pReg->DR;
                        pData++;
                        bytesToReceive--;
                    }
                } else if (bytesToReceive == 2) { // Two bytes
                    // Wait until BTF flag is set
                    keepGoing = waitFlagOk(pReg, I2C_FLAG_BTF, SET, timeoutMs);
                    if (keepGoing) {
                        // Generate stop
                        SET_BIT(pReg->CR1, I2C_CR1_STOP);
                        // Read the data from DR
                        *pData = (char) pReg->DR;
                        pData++;
                        bytesToReceive--;
                        // Read the data from DR
                        *pData = (char) pReg->DR;
                        pData++;
                        bytesToReceive--;
                    }
                } else { // Last three bytes
                    // Wait until BTF flag is set
                    keepGoing = waitFlagOk(pReg, I2C_FLAG_BTF, SET, timeoutMs);
                    if (keepGoing) {
                        // Disable acknowledge
                        CLEAR_BIT(pReg->CR1, I2C_CR1_ACK);
                        // Read the data from DR
                        *pData = (char) pReg->DR;
                        pData++;
                        bytesToReceive--;
                        // Wait until BTF flag is set
                        keepGoing = waitFlagOk(pReg, I2C_FLAG_BTF, SET, timeoutMs);
                        if (keepGoing) {
                            // Generate stop
                            SET_BIT(pReg->CR1, I2C_CR1_STOP);
                            // Read the data from DR
                            *pData = (char) pReg->DR;
                            pData++;
                            bytesToReceive--;
                            // Read the data from DR
                            *pData = (char) pReg->DR;
                            pData++;
                            bytesToReceive--;
                        }
                    }
                }
            } else {
                // Wait until the RXNE flag is set
                keepGoing = waitFlagOk(pReg, I2C_FLAG_RXNE, SET, timeoutMs);
                if (keepGoing) {
                    // Read the data from DR
                    *pData = (char) pReg->DR;
                    pData++;
                    bytesToReceive--;
                }
                if (U_PORT_HAL_I2C_GET_FLAG(pReg, I2C_FLAG_BTF) == SET) {
                    // Read the data from DR
                    *pData = (char) pReg->DR;
                    pData++;
                    bytesToReceive--;
                }
            }
        }
        if (keepGoing) {
            errorCodeOrLength = (int32_t) (size - bytesToReceive);
        }
    }

    return errorCodeOrLength;
}

static int32_t openI2c(int32_t i2c, int32_t pinSda, int32_t pinSdc,
                       bool controller, bool adopt)
{
    int32_t handleOrErrorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    LL_GPIO_InitTypeDef gpioInitStruct = {0};
    I2C_TypeDef *pReg;
    bool configurationOk = true;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        handleOrErrorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        // > 0 rather than >= 0 below 'cos ST number their UARTs from 1
        if ((i2c > 0) && (i2c < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[i2c].pReg == NULL) && controller &&
            (adopt || ((pinSda >= 0) && (pinSdc >= 0)))) {
            pReg = gpI2cReg[i2c];
            // Enable the clocks to the bus
            handleOrErrorCode = clockEnable(pReg);
            if (handleOrErrorCode >= 0) {
                handleOrErrorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
                if (!adopt) {
                    // Enable clock to the registers for the pins
                    uPortPrivateGpioEnableClock(pinSda);
                    uPortPrivateGpioEnableClock(pinSdc);
                    // The Pin field is a bitmap so we can do SDA and SCL
                    // at the same time as they are always on the same port
                    gpioInitStruct.Pin = (1U << U_PORT_STM32F4_GPIO_PIN(pinSda)) |
                                         (1U << U_PORT_STM32F4_GPIO_PIN(pinSdc));
                    gpioInitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
                    gpioInitStruct.Speed = LL_GPIO_SPEED_FREQ_VERY_HIGH;
                    gpioInitStruct.OutputType = LL_GPIO_OUTPUT_OPENDRAIN;
                    gpioInitStruct.Pull = LL_GPIO_PULL_UP;
                    // AF4 from the data sheet for the STM32F437VG
                    gpioInitStruct.Alternate = LL_GPIO_AF_4;
                    if ((LL_GPIO_Init(pUPortPrivateGpioGetReg(pinSda),
                                      &gpioInitStruct) != SUCCESS) ||
                        (configureHw(pReg, U_PORT_I2C_CLOCK_FREQUENCY_HERTZ) != 0)) {
                        configurationOk = false;
                    }
                }
                if (configurationOk) {
                    gI2cData[i2c].clockHertz = U_PORT_I2C_CLOCK_FREQUENCY_HERTZ;
                    gI2cData[i2c].timeoutMs = U_PORT_I2C_TIMEOUT_MILLISECONDS;
                    gI2cData[i2c].pinSda = pinSda;
                    gI2cData[i2c].pinSdc = pinSdc;
                    gI2cData[i2c].pReg = pReg;
                    gI2cData[i2c].adopted = adopt;
                    // Return the I2C HW block number as the handle
                    handleOrErrorCode = i2c;
                } else {
                    if (!adopt) {
                        // Put the bus back to sleep on error
                        clockDisable(pReg);
                    }
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return handleOrErrorCode;
}

int32_t uPortI2cSetClock(int32_t handle, int32_t clockHertz)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        // > 0 rather than >= 0 below 'cos ST number their UARTs from 1
        if ((handle > 0) && (handle < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[handle].pReg != NULL)) {
            errorCode = (int32_t) U_ERROR_COMMON_NOT_SUPPORTED;
            if (!gI2cData[handle].adopted) {
                errorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
                if (configureHw(gI2cData[handle].pReg, clockHertz) == 0) {
                    gI2cData[handle].clockHertz = clockHertz;
                    errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}
