==> u-blox/ubxlib/port/platform/esp-idf/src/u_port_i2c.c <==
#include "stddef.h"
#include "stdint.h"
#include "stdbool.h"
#include "u_cfg_sw.h"
#include "u_error_common.h"
#include "u_port.h"
#include "u_port_debug.h"
#include "u_port_os.h"
#include "u_port_i2c.h"
#include "driver/i2c.h"
# define U_PORT_I2C_MAX_NUM 2
#define U_PORT_I2C_TIMEOUT_MS_TO_ESP32(timeoutMs) ((timeoutMs) * 80000)
#define U_PORT_I2C_TIMEOUT_ESP32_TO_MS(timeoutEsp32) ((timeoutEsp32) / 80000)
#define U_PORT_7BIT_ADDRESS_READ(__ADDRESS__) (((__ADDRESS__) << 1) | I2C_MASTER_READ)
#define U_PORT_7BIT_ADDRESS_WRITE(__ADDRESS__) (((__ADDRESS__) << 1) | I2C_MASTER_WRITE)
#define U_PORT_10BIT_HEADER_READ(__ADDRESS__) ((((__ADDRESS__) & (0x0300)) >> 7) | 0xF0 | I2C_MASTER_READ)
#define U_PORT_10BIT_HEADER_WRITE(__ADDRESS__) ((((__ADDRESS__) & (0x0300)) >> 7) | 0xF0 | I2C_MASTER_WRITE)
#define U_PORT_10BIT_ADDRESS(__ADDRESS__) ((__ADDRESS__) & 0xFF)

static int32_t send(int32_t handle, uint16_t address,
                    const char *pData, size_t size, bool noStop)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
    i2c_cmd_handle_t cmd = i2c_cmd_link_create();

    if (i2c_master_start(cmd) == ESP_OK) {
        errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
        // First set up the address
        if (address > 127) {
            if ((i2c_master_write_byte(cmd, U_PORT_10BIT_HEADER_WRITE(address), true) != ESP_OK) ||
                (i2c_master_write_byte(cmd, U_PORT_10BIT_ADDRESS(address), true) != ESP_OK)) {
                errorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
            }
        } else {
            if (i2c_master_write_byte(cmd, U_PORT_7BIT_ADDRESS_WRITE(address), true) != ESP_OK) {
                errorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
            }
        }
        if (errorCode == (int32_t) U_ERROR_COMMON_SUCCESS) {
            errorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
            // Now add the data, with optional stop marker, and execute it
            if (((pData == NULL) || (i2c_master_write(cmd, (const uint8_t *) pData, size, true) == ESP_OK)) &&
                (noStop || (i2c_master_stop(cmd) == ESP_OK)) &&
                (i2c_master_cmd_begin(handle, cmd, 0) == ESP_OK)) {
                errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
            }
        }
        i2c_cmd_link_delete(cmd);
    }

    return errorCode;
}

static int32_t receive(int32_t handle, uint16_t address, char *pData, size_t size)
{
    int32_t errorCodeOrLength = (int32_t) U_ERROR_COMMON_PLATFORM;
    i2c_cmd_handle_t cmd = i2c_cmd_link_create();

    if (i2c_master_start(cmd) == ESP_OK) {
        errorCodeOrLength = (int32_t) U_ERROR_COMMON_SUCCESS;
        // First set up the address
        if (address > 127) {
            if ((i2c_master_write_byte(cmd, U_PORT_10BIT_HEADER_WRITE(address), true) != ESP_OK) ||
                (i2c_master_write_byte(cmd, U_PORT_10BIT_ADDRESS(address), true) != ESP_OK) ||
                (i2c_master_start(cmd) != ESP_OK) ||
                (i2c_master_write_byte(cmd, U_PORT_10BIT_HEADER_READ(address), true) != ESP_OK)) {
                errorCodeOrLength = (int32_t) U_ERROR_COMMON_PLATFORM;
            }
        } else {
            if (i2c_master_write_byte(cmd, U_PORT_7BIT_ADDRESS_READ(address), true) != ESP_OK) {
                errorCodeOrLength = (int32_t) U_ERROR_COMMON_PLATFORM;
            }
        }
        if (errorCodeOrLength == (int32_t) U_ERROR_COMMON_SUCCESS) {
            // Now read the data, the last byte with a nack, and execute it
            if ((size > 0) &&
                ((i2c_master_read(cmd, (uint8_t *) pData, size - 1, I2C_MASTER_ACK) != ESP_OK) ||
                 (i2c_master_read_byte(cmd, (uint8_t *) (pData + size - 1), I2C_MASTER_LAST_NACK) != ESP_OK))) {
                errorCodeOrLength = (int32_t) U_ERROR_COMMON_PLATFORM;
            }
            if ((errorCodeOrLength == (int32_t) U_ERROR_COMMON_SUCCESS) &&
                (i2c_master_stop(cmd) == ESP_OK) &&
                (i2c_master_cmd_begin(handle, cmd, 0) == ESP_OK)) {
                errorCodeOrLength = (int32_t) size;
            }
        }
        i2c_cmd_link_delete(cmd);
    }

    return errorCodeOrLength;
}

static int32_t openI2c(int32_t i2c, int32_t pinSda, int32_t pinSdc,
                       bool controller, bool adopt)
{
    int32_t handleOrErrorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    i2c_config_t cfg = {0};

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        handleOrErrorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((i2c >= 0) && (i2c < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[i2c].clockHertz < 0) && controller &&
            (adopt || ((pinSda >= 0) && (pinSdc >= 0)))) {
            handleOrErrorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
            cfg.mode = I2C_MODE_MASTER;
            cfg.sda_io_num = pinSda;
            cfg.scl_io_num = pinSdc;
            cfg.sda_pullup_en = true;
            cfg.scl_pullup_en = true;
            cfg.master.clk_speed = U_PORT_I2C_CLOCK_FREQUENCY_HERTZ;
            if (adopt ||
                ((i2c_param_config(i2c, &cfg) == ESP_OK) &&
                 (i2c_set_timeout(i2c, U_PORT_I2C_TIMEOUT_MS_TO_ESP32(U_PORT_I2C_TIMEOUT_MILLISECONDS)) == ESP_OK) &&
                 (i2c_driver_install(i2c, I2C_MODE_MASTER, 0, 0, 0) == ESP_OK))) {
                // We need to remember the configuration in this case
                // as the only way to change the clock is to reconfigure
                // the instance entirely
                gI2cData[i2c].pinSda = pinSda;
                gI2cData[i2c].pinSdc = pinSdc;
                gI2cData[i2c].clockHertz = cfg.master.clk_speed;
                gI2cData[i2c].adopted = adopt;
                // Return the I2C HW block number as the handle
                handleOrErrorCode = i2c;
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return handleOrErrorCode;
}

int32_t uPortI2cSetClock(int32_t handle, int32_t clockHertz)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    i2c_config_t cfg = {0};
    int32_t timeoutEsp32;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[handle].clockHertz > 0) && (clockHertz > 0)) {
            errorCode = (int32_t) U_ERROR_COMMON_NOT_SUPPORTED;
            if (!gI2cData[handle].adopted) {
                errorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
                // The only way to configure the clock is to do a full
                // reconfiguration of the instance
                if (i2c_get_timeout(handle, &timeoutEsp32) == ESP_OK) {
                    cfg.mode = I2C_MODE_MASTER;
                    cfg.sda_io_num = gI2cData[handle].pinSda;
                    cfg.scl_io_num = gI2cData[handle].pinSdc;
                    cfg.sda_pullup_en = true;
                    cfg.scl_pullup_en = true;
                    cfg.master.clk_speed = clockHertz;

                    if (i2c_driver_delete(handle) == ESP_OK) {
                        // Mark the instance as not in use in case reconfiguring
                        // it doesn't work
                        gI2cData[handle].clockHertz = -1;
                        if ((i2c_param_config(handle, &cfg) == ESP_OK) &&
                            (i2c_set_timeout(handle, timeoutEsp32) == ESP_OK) &&
                            (i2c_driver_install(handle, I2C_MODE_MASTER, 0, 0, 0) == ESP_OK)) {
                            // All is good
                            gI2cData[handle].pinSda = cfg.sda_io_num;
                            gI2cData[handle].clockHertz = clockHertz;
                            errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
                        }
                    }
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}
